[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/theme/dark_theme.tres" type="Theme" id=1]
[ext_resource path="res://components/wizard/multi_field_template_element.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/icons/icon_128_add.svg" type="Texture" id=4]
[ext_resource path="res://components/elements/styled/icon_button_text.tscn" type="PackedScene" id=5]
[ext_resource path="res://components/wizard/wizard_steps/wizard_step_multiple_fields.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0353544, 0.107943, 0.178516, 1 )

[node name="WizardStep_MultipleFields" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
intercept_next = true

[node name="VBox" type="VBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextLabel" type="RichTextLabel" parent="VBox"]
self_modulate = Color( 0.537255, 0.819608, 0.945098, 1 )
margin_right = 1920.0
margin_bottom = 24.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
theme_type_variation = "FontMedium"
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "Lorem [code]Ipsum[/code] Dolor, [b]Lorem[/b]"
text = "Lorem Ipsum Dolor, Lorem"
fit_content_height = true
scroll_active = false

[node name="Label" type="Label" parent="VBox"]
margin_left = 847.0
margin_top = 27.0
margin_right = 1073.0
margin_bottom = 64.3333
size_flags_horizontal = 4
theme_type_variation = "Label_36"
text = "Drop your files here"
align = 1
valign = 1

[node name="ReferenceRect" type="Panel" parent="VBox"]
margin_top = 69.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBox/ReferenceRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ElementList" type="HFlowContainer" parent="VBox/ReferenceRect/ScrollContainer"]
unique_name_in_owner = true
margin_right = 1910.0
margin_bottom = 1001.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="IconButtonText" parent="VBox" instance=ExtResource( 5 )]
visible = false
margin_left = 889.0
margin_top = 1047.0
margin_right = 1029.67
margin_bottom = 1080.0
size_flags_vertical = 1
text = "       Add Element"
icon_tex = ExtResource( 4 )

[node name="MultipleFieldStepTemplateElement" parent="VBox" instance=ExtResource( 2 )]
visible = false

[node name="TextAppearTween" type="Tween" parent="."]

[connection signal="sort_children" from="VBox/ReferenceRect/ScrollContainer/ElementList" to="." method="_on_ElementList_sort_children"]
[connection signal="pressed" from="VBox/IconButtonText" to="." method="_on_IconButtonText_pressed"]
[connection signal="tween_all_completed" from="TextAppearTween" to="." method="_on_TextAppearTween_tween_all_completed"]
[connection signal="tween_completed" from="TextAppearTween" to="." method="_on_TextAppearTween_tween_completed"]
